--- a/Portfolio/portfolio/Base/templates/home.html
+++ b/Portfolio/portfolio/Base/templates/home.html
@@ -113,9 +113,9 @@
                     <h1 class="t-white poppins">Smart Buss Pass</h1>
                     <p class="t-white poppins">Developed a user-friendly website for renewing bus passes online using the current pass
                         details.</p>
-                    <div class="buttons flex s-around">
+                    <div class="flex s-around">
                         <a href="" target="_blank"
-                        class="btn mx-1 m-top">Github</a>
+                        class="mx-1 m-top">Github</a>
                     </div>
                 </div>
 
@@ -123,18 +123,20 @@
                     <h1 class="t-white poppins">DeepFake Detection </h1>
                     <p class="t-white poppins">Designed and implemented a machine learning-based system to identify and detect deepfake videos, focusing on accuracy and realtime processing to enhance digital media
                         security.</p>
-                    <div class="buttons flex s-around">
+                    <div class="flex s-around">
                         <a href="" target="_blank"
-                        class="btn mx-1 m-top"> Github</a>
+                        class="mx-1 m-top"> Github</a>
                     </div>
                 </div>
 
                 <div class="projects-item flex f-col s-center items-center">
                     <h1 class="t-white poppins">My Portfolio</h1>
-                    <p class="t-white poppins">This is My portfolio website which is created with HTML,CSS and Django which describe my skill and knowledge.My portfolio website showcases my work in a sleek and minimalist design,allowing the focus to be on the content itself.The layput is uncluttered,making it easy for visitors to navigate and explore my projects.</p>
-                    <div class="buttons flex s-around">
+                    <p class="t-white poppins">This is My portfolio website which is created with HTML,CSS and Django which describe my skill and knowledge.My portfolio website showcases
+                         my work in a sleek and minimalist design,allowing the focus to be on the content itself.
+                         </p>
+                    <div class="flex s-around">
                         <a href="" target="_blank"
-                        class="btn mx-1 m-top">Github</a>
+                        class="mx-1 m-top">Github</a>
                     </div>
                 </div>
 
@@ -144,36 +146,43 @@
 
     <!--contact  section-->
     <section id="contact" class="m-b-1">
-        <h1 class="t-center my-2 t-white f-2">Contact Me</h1>
-        <div class="contact-container flex s-around items-centers">
-            <div class="form" id="contactform">
-                <form method="post">
-                    {% csrf_token %}
-                    <div class="name form-div">
-                        <input type="text" name="name" id="name" class=" poppinss" placeholder="Enter Your Name">
+        <div class="row">
+            <div class="col-left">
+               <h1 class="t-center my-2 t-white f-2">Contact Me</h1>
+            </div>
+            <div class="col-right">
+                <div class="contact-container flex s-around items-centers">
+                    <div class="form" id="contactform">
+                        <form method="post">
+                            {% csrf_token %}
+                            <div class="name form-div">
+                                <input type="text" name="name" id="name" class=" poppinss" placeholder="Enter Your Name">
+                            </div>
+        
+                            <div class="email form-div">
+                                <input type="email" name="email" id="email" class=" poppinss" placeholder="email@gmail.com"required>
+                            </div>
+        
+                            <div class="phone form-div">
+                                <input type="number" name="number" id="phone" class=" poppinss" placeholder="Enter Your mobile number" required>
+                            </div>
+        
+                            <div class="textarea form-div">
+                                <textarea name="content" id="textarea"  cols="30" rows="10" class=" poppinss" placeholder="Enter Your message"></textarea>
+        
+                            </div>
+        
+                            <button type="submit" class="btn poppinss" id="submit">
+                                Send
+                            </button>
+        
+                        </form>
+        
                     </div>
-
-                    <div class="email form-div">
-                        <input type="email" name="email" id="email" class=" poppinss" placeholder="email@gmail.com"required>
-                    </div>
-
-                    <div class="phone form-div">
-                        <input type="number" name="number" id="phone" class=" poppinss" placeholder="Enter Your mobile number" required>
-                    </div>
-
-                    <div class="textarea form-div">
-                        <textarea name="content" id="textarea"  cols="30" rows="10" class=" poppinss" placeholder="Enter Your message"></textarea>
-
-                    </div>
-
-                    <button type="submit" class="btn poppinss" id="submit">
-                        Send
-                    </button>
-
-                </form>
-
+                </div>
             </div>
         </div>
+        
     </section>
 
     <!--footer section-->
